add wallet, user, crypto, core blockchain services